--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "v-show-slide": "^1.8.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vue2-smooth-scroll": "^1.5.0"
+    "vue2-smooth-scroll": "^1.5.0",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
@@ -25,8 +26,11 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "node-sass": "^4.12.0",
+    "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "~2.0.8",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   },
   "browserslist": [
     "> 1%",
